--- a/Editor/Kogane.NPOIEditor.asmdef
+++ b/Editor/Kogane.NPOIEditor.asmdef
@@ -1,5 +1,6 @@
-﻿{
+{
     "name": "Kogane.NPOIEditor",
+    "rootNamespace": "",
     "references": [],
     "includePlatforms": [
         "Editor"
@@ -11,5 +12,5 @@
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
-    "noEngineReferences": false
+    "noEngineReferences": true
 }
